# src/server/api/docs/server_swagger.yaml
@@ -594,6 +594,10 @@ definitions:
         type: string
       first_last_name:
         type: string
+      image_bytes:
+        items:
+          type: integer
+        type: array
       image_url:
         type: string
       name:
@@ -972,6 +976,31 @@ definitions:
       type:
         type: string
     type: object
+  schemas.ProfessionalWithImage:
+    properties:
+      email:
+        type: string
+      first_last_name:
+        type: string
+      id:
+        type: string
+      image_bytes:
+        items:
+          type: integer
+        type: array
+      image_url:
+        type: string
+      name:
+        type: string
+      phone_number:
+        type: string
+      second_last_name:
+        type: string
+      specialty:
+        type: string
+      type:
+        type: string
+    type: object
   schemas.Professionals:
     properties:
       professionals:
@@ -1231,6 +1260,10 @@ definitions:
         type: string
       first_last_name:
         type: string
+      image_bytes:
+        items:
+          type: integer
+        type: array
       image_url:
         type: string
       name:
@@ -1427,30 +1460,34 @@ definitions:
     type: object
   time.Duration:
     enum:
-    - 1
-    - 1000
-    - 1000000
-    - 1000000000
-    - 60000000000
+    - -9223372036854775808
+    - 9223372036854775807
     - 1
     - 1000
     - 1000000
     - 1000000000
     - 60000000000
     - 3600000000000
+    - 1
+    - 1000
+    - 1000000
+    - 1000000000
+    - 60000000000
     type: integer
     x-enum-varnames:
-    - Nanosecond
-    - Microsecond
-    - Millisecond
-    - Second
-    - Minute
+    - minDuration
+    - maxDuration
     - Nanosecond
     - Microsecond
     - Millisecond
     - Second
     - Minute
     - Hour
+    - Nanosecond
+    - Microsecond
+    - Millisecond
+    - Second
+    - Minute
 info:
   contact: {}
   description: AstroCat API sample for clients
@@ -4390,6 +4427,49 @@ paths:
       security:
       - JWT: []
       summary: Update Professional.
+      tags:
+      - Professional
+  /professional/{professionalId}/image/:
+    get:
+      consumes:
+      - application/json
+      description: Gets a professional given its id with image bytes.
+      parameters:
+      - description: Professional ID
+        in: path
+        name: professionalId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/schemas.ProfessionalWithImage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "401":
+          description: Missing or malformed JWT
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/errors.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errors.Error'
+      security:
+      - JWT: []
+      summary: Get Professional with image.
       tags:
       - Professional
   /professional/bulk-create/:
